--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -16,14 +16,19 @@ h1, h3{
   text-align: center;
 }
 
+.container1{
+  background-color: rgb(255, 255, 255);
+}
+
 body{
   margin: 0;
   padding: 0;
-  background-color: rgb(125, 125, 180);
+  background-color: rgb(255, 255, 255);
 }
+
 ul .action {
 list-style-type: none;
 }
-li{
+ul li{
   display: inline;
 }
