--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
 
          <% } %>
               
-      <table id="myTable">
+      <table id="myTable" class="table">
         <thead>
           <tr>
           <th scope="col">Roll No.</th>
@@ -34,19 +34,21 @@
         <ul class="action">
             <% if(login){ %>
               <li>
-                <a href="/student/<%=student._id %>" ><img src="/materialicon/morev.svg" alt=""></a >
+                <a href="/student/studentDetails/<%=student._id %>" class="btn btn-success btn-sm">Detail</a >
               </li>
               <li>
-                  <a href="/users/index/<%=student._id %>"><img src="/materialicon/edit.png" alt=""></a>
+                  <a href="/users/index/<%=student._id %>" class="btn btn-warn btn-sm">Edit</a>
               </li>
               <li>
                     <form action="/users/index/<%= student._id%>?_method=DELETE" method="POST">
-                      <button><img src="/materialicon/delete.png" alt=""></button>
+                      <button onclick="return confirm('Delete <%= student.name %>\'s Record Permanently?');" class="btn btn-danger btn-sm d-flex justify-content-end">Remove</button>
                   </form>
               </li>
               <%  } else {  %>
                 <li>
-                    <a href="/student/<%=student._id %>" class="btn btn-outline-success"><img src="/materialicon/morev.svg" alt="">Details </a >
+                    <a href="/student/studentDetails/<%=student._id %>" class="btn btn-primary btn-sm">Detail</a >
+<a href="/student/<%=student._id %>"><button class="btn btn-primary mr-5 fa-pull-right">See Performance</button></a>
+
                     </li>
               <% } %>
     </ul>
