--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,9 +1,7 @@
-<div class="row mt-5">
+<div class="row mt-1">
   <div class="col-md-6 m-auto">
     <div class="card card-body">
-      <h1>Welcome To Mewat Engineering College, Nuh Haryana</h1>
       <h1 class="text-center mb-3">
-        
         <i class="fas fa-sign-in-alt"></i>  Login</h1>
       <form action="/users/login" method="POST">
         <div class="form-group">
@@ -29,7 +27,7 @@
         <button type="submit" class="btn btn-primary btn-block">Login</button>
       </form>
       <p class="lead mt-4">
-        No Account? <a href="/users/index">Login As Guest</a>
+        <a href="/users/index">Login As Guest</a>
       </p>
       <p class="lead">
         No Account? <a href="/users/register">Register</a>
